# MestintBeadando

./: O6U1ZU_mestint_beadando.rar  README.md
Doc/: Bicolor_Hanoi.c
Hanoi_algoritmusok/Hanoi/WindowsFormsApp14/: WindowsFormsApp14.sln
Hanoi_algoritmusok/Hanoi/WindowsFormsApp14/WindowsFormsApp14/: Form1.Designer.cs  Form1.cs  WindowsFormsApp14.csproj
Hanoi_algoritmusok/Hanoi/WindowsFormsApp14/WindowsFormsApp14/AllapotTer/: Allapot.cs  Csomopont.cs  Operator.cs
Hanoi_algoritmusok/Hanoi/WindowsFormsApp14/WindowsFormsApp14/Keresok/: Aalgoritmus.cs  AgEsKorlat.cs  Backtrack.cs  BestFirst.cs  Kereso.cs  Melysegi.cs  Optimalis.cs  Szelessegi.cs  (+1 more)
Mestint/: Mestint.sln
Mestint/Debug/: Mestint.ilk
Mestint/Mestint/: Allapot.cpp  Allapot.h  Backtrack.h  Button.h  Csomopont.h  Globals.h  Hanoi.h  Kereso.h  Korong.cpp  Korong.h  Melysegi.h  Mestint.vcxproj  Mestint.vcxproj.filters  Operator.h  Oprt.h  Oszlop.h  ProbaHibaRandom.h  main.cpp
Mestint/Mestint/Debug/: Mestint.exe.recipe  vc142.idb
Mestint/Mestint/Debug/Mestint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mestint.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Mestint/Mestint/Release/: Mestint.exe.recipe
Mestint/Mestint/Release/Mestint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mestint.lastbuildstate  Mestint.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Mestint/Release/: Mestint.iobj  Mestint.ipdb
Mestint_cmake/: CMakeLists.txt
Mestint_cmake/src/: Allapot.h  Csomopont.h  Hanoi.h  Kereso.h  Korong.h  Oszlop.h  main.cpp
(+1 files in other folders)
